<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/dialog_bg">

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/full_name"
            android:textColorHint="@color/text_title"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:textColorHint="@color/text_title"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:textStyle="bold"
            android:hint="@string/city"
            android:textSize="20sp"
            android:inputType="text"
            android:textColorHint="@color/text_title"
            android:padding="16dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:textColorHint="@color/text_title"
            android:inputType="phone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edit_zip_code"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:textColorHint="@color/text_title"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:padding="16dp"
            android:layout_marginTop="10dp" />

        <android.widget.Button
            android:id="@+id/btn_save_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_light"
            android:text="@string/save"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</FrameLayout>