<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/your_perfect_coffee_anytime_anywhere"
        android:textColor="#F8F4E1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/start_your_day_right_with_a_cup_of_perfection"
        android:textColor="#F8F4E1"
        android:textSize="20sp"
        />

    <android.widget.Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/get_started"
        android:textStyle="bold"
        android:backgroundTint="#F8F4E1"
        android:background="@drawable/btn"
        android:textColor="#543310"
        android:textSize="20sp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="70dp"/>

</RelativeLayout>
