<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_light">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_cart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/emptyCartMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_cart_is_empty"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintBottom_toTopOf="@+id/totalLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/totalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/btnCheckout"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/totalLabel"
                    app:layout_constraintStart_toEndOf="@+id/totalLabel"
                    app:layout_constraintTop_toTopOf="@+id/totalLabel"
                    android:layout_marginStart="8dp" />

                <android.widget.Button
                    android:id="@+id/btnClearCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    android:textColor="@color/text_title"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:background="@drawable/btn_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp" />

                <android.widget.Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/text_title"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:background="@drawable/btn_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnClearCart"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>